--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 MONGODB_URI=mongodb+srv://codingbysanthosh:Ziaz7WPz58JATbpN@cluster0.jqwv1x4.mongodb.net/crud_db
-API_URL=https://dishesbysanthosh.netlify.app
+API_URL=http://localhost:3000
